# cmake_blueprint

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.py
cmake/: android.apk.cmake  buildHelper.cmake
dependencies/: CMakeLists.txt
platform/android/: AndroidManifest.in.xml
platform/android/src/com/blueprint/cmake/: main.java
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/include/: config.h
source/app/source/: main.cpp
source/meta/: version.h.in
src/: main.cpp
